# Ecommerce-Axum

./: .gitignore  AUTH_CART_SYSTEM.md  README.md
backend/: .gitignore  Cargo.toml
backend/migrations/20251121_create_products/: up.sql
backend/src/: main.rs  models.rs  routes.rs  schema.rs
frontend/: angular.json  bun.lockb  package-lock.json  package.json  tsconfig.json
frontend/.angular/cache/21.0.0/frontend/: .tsbuildinfo  angular-compiler.db  angular-compiler.db-lock
frontend/.kiro/specs/angular-architecture-fix/: design.md  requirements.md  tasks.md
frontend/.kiro/specs/ecommerce-cart-checkout/: design.md  requirements.md  tasks.md
frontend/.kiro/specs/frontend-backend-integration/: design.md  requirements.md  tasks.md
frontend/src/: styles.css
frontend/src/app/: app.html  app.routes.ts  app.ts
frontend/src/app/components/cart-drawer/: cart-drawer.html  cart-drawer.ts
frontend/src/app/components/footer/: footer.html
frontend/src/app/components/hero/: hero.html  hero.ts
frontend/src/app/guards/: admin.guard.ts
frontend/src/app/page/: admin.component.html  admin.component.ts  checkout.component.html  checkout.component.ts  home.component.html  home.component.ts  login.component.html  login.component.ts  orders.component.html  orders.component.ts  product-detail.component.html  product-detail.component.ts  products.component.html  products.component.ts  register.component.html  register.component.ts
frontend/src/app/services/: auth.service.ts  cart.service.ts  language.service.ts  order.service.ts  product.service.ts
(+5 files in other folders)
