[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json", "macros", "tokio", "http1", "http2", "form", "multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
diesel = { version = "2.0.3", features = ["postgres", "r2d2", "chrono"] }
uuid = { version = "1", features = ["v4"] }
hyper = "1.8.1"
tower-http = { version = "0.5", features = ["cors"] }
